src/test/resources/errors/06-error.c
int lookup(int x) {
    int x;

    for(int i = 0; i < 10; i ++) {
        x += i;
    }
}